HTMLParser for LinkPreview now also checks size.