@@ -10,17 +10,22 @@ import javax.imageio.stream.ImageInputStream;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 /**
  * Utility class for extracting preview information from HTML documents
  */
 public class HtmlParser {
+    // Maximum image file size in bytes (300 KB)
+    private static final int MAX_IMAGE_SIZE = 300 * 1024;
+
+    // Connection timeout in seconds
+    private static final int CONNECTION_TIMEOUT = 5;
 
     /**
      * Extracts the title from HTML document with fallback options:
@@ -49,14 +54,14 @@ public class HtmlParser {
         if (twitterTitle.isPresent()) {
             return twitterTitle;
         }
-        
+
         // Try meta title tag
-        Optional<String> metaTitle = Optional.ofNullable(document.title())
+        Optional<String> metaTitle = Optional.of(document.title())
                 .filter(title -> !title.isEmpty());
         if (metaTitle.isPresent()) {
             return metaTitle;
         }
-        
+
         // Try h1 tag
         Optional<String> h1Title = Optional.ofNullable(document.select("h1").first())
                 .map(Element::text)
@@ -64,13 +69,13 @@ public class HtmlParser {
         if (h1Title.isPresent()) {
             return h1Title;
         }
-        
+
         // Try h2 tag
         return Optional.ofNullable(document.select("h2").first())
                 .map(Element::text)
                 .filter(text -> !text.isEmpty());
     }
-    
+
     /**
      * Extracts the description from HTML document with fallback options:
      * 1. Open Graph description
@@ -89,7 +94,7 @@ public class HtmlParser {
         if (ogDescription.isPresent()) {
             return ogDescription;
         }
-        
+
         // Try Twitter Card description
         Optional<String> twitterDescription = Optional.ofNullable(document.select("meta[name=twitter:description]").first())
                 .map(element -> element.attr("content"))
@@ -97,7 +102,7 @@ public class HtmlParser {
         if (twitterDescription.isPresent()) {
             return twitterDescription;
         }
-        
+
         // Try meta description
         Optional<String> metaDescription = Optional.ofNullable(document.select("meta[name=description]").first())
                 .map(element -> element.attr("content"))
@@ -105,15 +110,15 @@ public class HtmlParser {
         if (metaDescription.isPresent()) {
             return metaDescription;
         }
-        
+
         // Try first paragraph with content
         return document.select("p")
                 .stream()
-                .filter(p -> !p.text().isEmpty())
                 .map(Element::text)
+                .filter(text -> !text.isEmpty())
                 .findFirst();
     }
-    
+
     /**
      * Extracts the domain name from HTML document with fallback options:
      * 1. Canonical link
@@ -131,87 +136,136 @@ public class HtmlParser {
                 .filter(href -> !href.isEmpty())
                 .flatMap(href -> {
                     try {
-                        return Optional.of(new URL(href));
+                        return Optional.of(URI.create(href).toURL());
                     } catch (MalformedURLException e) {
                         return Optional.empty();
                     }
                 });
-        
+
         if (canonicalUrl.isPresent()) {
-            return getDomainName(canonicalUrl.orElseThrow());
+            return getDomainName(canonicalUrl.get());
         }
-        
+
         // Try Open Graph URL
         Optional<URL> ogUrl = Optional.ofNullable(document.select("meta[property=og:url]").first())
                 .map(element -> element.attr("content"))
                 .filter(content -> !content.isEmpty())
                 .flatMap(content -> {
                     try {
-                        return Optional.of(new URL(content));
+                        return Optional.of(URI.create(content).toURL());
                     } catch (MalformedURLException e) {
                         return Optional.empty();
                     }
                 });
-        
+
         if (ogUrl.isPresent()) {
-            return getDomainName(ogUrl.orElseThrow());
+            return getDomainName(ogUrl.get());
         }
-        
+
         // Use original URL as fallback
         return getDomainName(originalUrl);
     }
-    
+
     private static String getDomainName(URL url) {
         String host = url.getHost();
         return host.startsWith("www.") ? host.substring(4) : host;
     }
-    
+
     /**
      * Extracts image URL from HTML document with fallback options:
      * 1. Open Graph image
      * 2. Twitter Card image
      * 3. Image_src link
      * 4. Best image from document body
+     * Only images below MAX_IMAGE_SIZE will be considered.
      *
      * @param document The parsed HTML document
      * @param baseUrl The base URL for resolving relative URLs
-     * @return Optional containing the image URL if found
+     * @return Optional containing the image URL if found and within size limit
      */
     public static Optional<String> extractImageUrl(Document document, URL baseUrl) {
         // Try Open Graph image
         Optional<String> ogImage = Optional.ofNullable(document.select("meta[property=og:image]").first())
                 .map(element -> element.attr("content"))
                 .filter(content -> !content.isEmpty())
-                .map(content -> resolveUrl(content, baseUrl));
+                .map(content -> resolveUrl(content, baseUrl))
+                .filter(HtmlParser::isImageWithinSizeLimit);
+
         if (ogImage.isPresent()) {
             return ogImage;
         }
-        
+
         // Try Twitter Card image
         Optional<String> twitterImage = Optional.ofNullable(document.select("meta[name=twitter:image]").first())
                 .map(element -> element.attr("content"))
                 .filter(content -> !content.isEmpty())
-                .map(content -> resolveUrl(content, baseUrl));
+                .map(content -> resolveUrl(content, baseUrl))
+                .filter(HtmlParser::isImageWithinSizeLimit);
+
         if (twitterImage.isPresent()) {
             return twitterImage;
         }
-        
+
         // Try image_src link
         Optional<String> imageSrc = Optional.ofNullable(document.select("link[rel=image_src]").first())
                 .map(element -> element.attr("href"))
                 .filter(href -> !href.isEmpty())
-                .map(href -> resolveUrl(href, baseUrl));
+                .map(href -> resolveUrl(href, baseUrl))
+                .filter(HtmlParser::isImageWithinSizeLimit);
+
         if (imageSrc.isPresent()) {
             return imageSrc;
         }
-        
+
         // Find best image from document body
         return findBestImage(document, baseUrl);
     }
-    
+
+    /**
+     * Checks if an image is within the maximum size limit
+     *
+     * @param imageUrl The URL of the image to check
+     * @return true if the image is within the size limit, false otherwise
+     */
+    private static boolean isImageWithinSizeLimit(String imageUrl) {
+        try {
+            URL url = URI.create(imageUrl).toURL();
+            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            connection.setConnectTimeout((int) TimeUnit.SECONDS.toMillis(CONNECTION_TIMEOUT));
+            connection.setReadTimeout((int) TimeUnit.SECONDS.toMillis(CONNECTION_TIMEOUT));
+            connection.setRequestMethod("HEAD");
+
+            // Check if we got a valid response
+            int responseCode = connection.getResponseCode();
+            if (responseCode != HttpURLConnection.HTTP_OK) {
+                return false;
+            }
+
+            // Check content type
+            String contentType = connection.getContentType();
+            if (contentType == null || !contentType.startsWith("image/")) {
+                return false;
+            }
+
+            // Check file size
+            int contentLength = connection.getContentLength();
+
+            // If content length is not available or negative, we can't check size
+            if (contentLength <= 0) {
+                // In this case, we'll assume it's within limits to not discard potentially good images
+                return true;
+            }
+
+            return contentLength <= MAX_IMAGE_SIZE;
+        } catch (IOException e) {
+            // If we can't check the size, we'll be conservative and not use the image
+            return false;
+        }
+    }
+
     private static Optional<String> findBestImage(Document document, URL baseUrl) {
         Elements imgElements = document.select("img");
-        
+
         // Filter and transform image elements
         List<ImageCandidate> imageCandidates = imgElements.stream()
                 .map(img -> {
@@ -219,32 +273,37 @@ public class HtmlParser {
                     if (src.isEmpty()) {
                         return null;
                     }
-                    
+
                     // Resolve URL
                     String resolvedUrl = resolveUrl(src, baseUrl);
-                    
+
+                    // Skip images that exceed size limit
+                    if (!isImageWithinSizeLimit(resolvedUrl)) {
+                        return null;
+                    }
+
                     try {
                         // Try to get actual image dimensions first
                         ImageDimensions dimensions = getImageDimensions(resolvedUrl);
-                        
+
                         // If we couldn't get actual dimensions, use attributes as fallback
                         if (dimensions == null) {
                             int width = parseIntAttribute(img, "width");
                             int height = parseIntAttribute(img, "height");
-                            
+
                             // If attributes are missing too, skip this image
                             if (width <= 0 || height <= 0) {
                                 return null;
                             }
-                            
+
                             dimensions = new ImageDimensions(width, height);
                         }
-                        
+
                         // Skip if either dimension is too small
                         if (dimensions.width() < 50 || dimensions.height() < 50) {
                             return null;
                         }
-                        
+
                         // Skip if aspect ratio is extreme
                         double aspectRatio;
                         if (dimensions.width() > dimensions.height()) {
@@ -252,78 +311,78 @@ public class HtmlParser {
                         } else {
                             aspectRatio = (double) dimensions.height() / dimensions.width();
                         }
-                        
+
                         if (aspectRatio > 3.0) {
                             return null;
                         }
-                        
+
                         // Calculate area for sorting
                         int area = dimensions.width() * dimensions.height();
-                        
+
                         return new ImageCandidate(resolvedUrl, area);
                     } catch (Exception e) {
                         // If anything goes wrong, fall back to attribute dimensions
                         int width = parseIntAttribute(img, "width");
                         int height = parseIntAttribute(img, "height");
-                        
+
                         // Skip if either dimension is too small
                         if (width < 50 || height < 50) {
                             return null;
                         }
-                        
+
                         // Skip if aspect ratio is extreme
                         if (width > height && width / height > 3) {
                             return null;
                         } else if (height > width && height / width > 3) {
                             return null;
                         }
-                        
+
                         // Calculate area for sorting
                         int area = width * height;
-                        
+
                         return new ImageCandidate(resolvedUrl, area);
                     }
                 })
                 .filter(java.util.Objects::nonNull)
                 .sorted((img1, img2) -> Integer.compare(img2.area(), img1.area())) // Sort by area (largest first)
-                .collect(Collectors.toList());
-        
+                .toList();
+
         return imageCandidates.stream()
                 .findFirst()
                 .map(ImageCandidate::url);
     }
-    
+
     /**
      * Get the actual dimensions of an image by reading its metadata
-     * 
+     *
      * @param imageUrl The URL of the image
      * @return The dimensions of the image, or null if they couldn't be determined
      */
     private static ImageDimensions getImageDimensions(String imageUrl) {
         try {
-            URL url = new URL(imageUrl);
+            URL url = URI.create(imageUrl).toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setConnectTimeout((int) TimeUnit.SECONDS.toMillis(5));
-            connection.setReadTimeout((int) TimeUnit.SECONDS.toMillis(5));
+            connection.setConnectTimeout((int) TimeUnit.SECONDS.toMillis(CONNECTION_TIMEOUT));
+            connection.setReadTimeout((int) TimeUnit.SECONDS.toMillis(CONNECTION_TIMEOUT));
             connection.setRequestMethod("HEAD");
-            
+
             // Check if the URL returns an image content type
             String contentType = connection.getContentType();
             if (contentType == null || !contentType.startsWith("image/")) {
                 return null;
             }
-            
+
             // Use ImageIO to get dimensions without downloading the entire image
             try (ImageInputStream in = ImageIO.createImageInputStream(url.openStream())) {
                 if (in == null) {
                     return null;
                 }
-                
+
                 Iterator<ImageReader> readers = ImageIO.getImageReaders(in);
                 if (!readers.hasNext()) {
                     return null;
                 }
-                
+
                 ImageReader reader = readers.next();
                 try {
                     reader.setInput(in);
@@ -339,7 +398,7 @@ public class HtmlParser {
             return null;
         }
     }
-    
+
     private static int parseIntAttribute(Element element, String attributeName) {
         try {
             return Integer.parseInt(element.attr(attributeName));
@@ -347,7 +406,7 @@ public class HtmlParser {
             return 0;
         }
     }
-    
+
     private static String resolveUrl(String url, URL baseUrl) {
         if (url.startsWith("//")) {
             return baseUrl.getProtocol() + ":" + url;
@@ -358,12 +417,12 @@ public class HtmlParser {
         }
         return url;
     }
-    
+
     /**
      * Record to hold image candidate information for sorting
      */
     private record ImageCandidate(String url, int area) {}
-    
+
     /**
      * Record to hold image dimensions
      */
